# SereneAI

./: .gitignore  main.py  pyproject.toml  requirements.txt
Backend/: app.py  test_api.py
Backend/core/: config.py  logging_config.py  security.py
Backend/database/: connection.py  redis_connection.py
Backend/models/: conversation.py  session.py  user.py
Backend/routes/: analytics.py  chat.py  conversations.py  sessions.py  users.py
Backend/schemas/: analytics.py  conversation.py  prompts.py  session.py  user.py
Backend/services/: analytics_service.py  anxiety_analyzer.py  conversation_service.py  dropout_predictor.py  insights_analyzer.py  session_service.py  text_analyser.py  user_service.py
Backend/services/pipeline/: __init__.py  aggregators.py  extractors.py  interfaces.py  orchestrator.py  responder.py  tools.py
Frontend/: index.html
Frontend/src/: App.jsx  index.css
Frontend/src/components/: ProtectedLayout.jsx
Frontend/src/pages/: Chat.jsx  Dashboard.jsx  Journal.jsx  Login.jsx  Profile.jsx  Register.jsx
Frontend/src/services/: api.js
ml_models/CNNModel/: cnnmodel.py
ml_models/Dropout/: all_churn_users.csv  synthetic_user_sessions.csv  thefinaldataset.ipynb
rag_pipeline/: __init__.py  config.py  embeddings.py  indexer.py  mcp_server.py  retriever.py  schemas.py  vector_store.py
