[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["Frontend*", "Frontend.*"]

[project]
name = "niral-thiruvizha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "chromadb>=0.5.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.0",
    "langchain>=1.2.15",
    "langchain-chroma>=0.2.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "mcp>=1.0.0",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.2",
    "pymongo>=4.9.0",
    "python-dateutil==2.9.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis>=5.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers",
    "uvicorn[standard]==0.30.6",
]
